# SimpleNormalMapper

./: .gitignore  AUTHORS  CHANGELOG  CMakeLists.txt  INSTALL  InstallLinux.cmake  InstallWindows.cmake  README  README.md  configure  genericLinuxBuild  mxeWindowsBuild  snm.pro  snm.sh
data/: qt.conf  snm.desktop  snm.desktop.opt.in
data/icons/: Icons.qrc  Windows.rc
packaging/debian/: changelog  control  copyright  rules
scripts/: archive.sh  genericLinuxBuild  mxeWindowsBuild  qt5StaticConfigure.sh  updatePPA.sh
src/: AboutDlg.cpp  AboutDlg.hpp  CMakeLists.txt  Config.cpp  Config.hpp  ControlToolBar.cpp  ControlToolBar.hpp  Editor.cpp  Editor.hpp  EditorScene.cpp  EditorScene.hpp  EditorView.cpp  EditorView.hpp  IO.cpp  IO.hpp  ImageItem.cpp  ImageItem.hpp  MainWindow.cpp  MainWindow.hpp  Normal.cpp  Normal.hpp  NormalItem.cpp  NormalItem.hpp  RenderDialog.cpp  RenderDialog.hpp  RenderPreview.cpp  RenderPreview.hpp  Renderer.cpp  Renderer.hpp  Settings.cpp  Settings.hpp  SettingsDialog.cpp  SettingsDialog.hpp  about_dlg.cpp  config.cpp  config.hpp  control_tool_bar.cpp  editor.cpp  editor.hpp  editor_scene.cpp  (+13 more)
